# vehicle_detection_YOLO

./: .gitignore  README.md  init_setup.sh  init_setup_MacM1.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev.yml  setup.cfg  setup.py  template.py  tox.ini
configs/: config.yaml  yolo_params.yaml  yolov5s.yaml
research/: stage_01.ipynb  stage_02.ipynb  stage_03.ipynb  test_scripts.py
src/vehicle_detection/: __init__.py
src/vehicle_detection/components/: data_ingestion.py  prepare_base_model.py
src/vehicle_detection/config/: __init__.py  configuration.py
src/vehicle_detection/constants/: __init__.py
src/vehicle_detection/entity/: __init__.py  config_entity.py
src/vehicle_detection/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py
src/vehicle_detection/utils/: __init__.py  common.py
