[metadata]
license= APACHE 2.0
license_file= license_file
classifier=
        Programming Language :: Python :: 3.10
        Operating System :: OS Independent

[options]
install_requires=
    ensure==1.0.2
python_requires= >=3.7 

[options.extras_require]
testing=
    pytest >=7.1.3 ##For testing purpose
    mypy>=0.971
    flake8>=5.0.4 ##eg: This will check if there are any un-necessary spaces 
    tox>=3.25.1 ##Create different working environment to test/work in parallel
    black>=22.8.0 ##Formatting application (code formatting)

[options.package_data]
vehicle_detection= py.typed  ## Ignore pytyped errors(If there are any testing errors etc,)

[flake8]
max-line-length= 350 ## maximim character length allowed
exclude = __init__.py ##Exclude debugging in file types.